--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="http://connect.facebook.net/ko_KR/sdk.js"
+    ></script>
     <title>React App</title>
   </head>
   <body>
