--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
       async
       defer
       crossorigin="anonymous"
-      src="http://connect.facebook.net/ko_KR/sdk.js"
+      src="https://connect.facebook.net/ko_KR/sdk.js"
     ></script>
-    <title>React App</title>
+    <title>체크해방</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
