--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+
     -->
+  <script src="//naver.github.io/egjs-agent/release/latest/dist/agent.min.js"></script>
+
   </body>
 </html>
