--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script
-      async
-      defer
-      crossorigin="anonymous"
-      src="https://connect.facebook.net/ko_KR/sdk.js"
-    ></script>
     <title>체크해방</title>
   </head>
   <body>
@@ -43,5 +36,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="//naver.github.io/egjs-agent/release/latest/dist/agent.min.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/ko_KR/sdk.js"
+    ></script>
   </body>
 </html>
