revert: implement google analytics (#101)
This reverts commit 62427cd9b080fe7142ad28a268ab002adfad91de.

--- a/public/index.html
+++ b/public/index.html
@@ -24,30 +24,7 @@
     <title>체크해방</title>
   </head>
   <body>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-analytics.js"></script>
-
-    <script>
-      // Your web app's Firebase configuration
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      var firebaseConfig = {
-        apiKey: "AIzaSyAzmQlyx-w39e1ZLD2su3KOew9lIN0F540",
-        authDomain: "checkhaebang.firebaseapp.com",
-        databaseURL: "https://checkhaebang.firebaseio.com",
-        projectId: "checkhaebang",
-        storageBucket: "checkhaebang.appspot.com",
-        messagingSenderId: "602722864577",
-        appId: "1:602722864577:web:e06cbf577630700630b340",
-        measurementId: "G-H9GBPWZGPG"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-    </script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
